hphp/hack/test/sound_dynamic/typing/sound_dynamic_callable_3.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

function expectVecInt(vec<int> $vi):void { }

class C {
  <<__SoundDynamicCallable>>
  public function foo(vec<int> $x):int {
    expectVecInt($x);
    return $x[0];
  }
}
